change background based on media queries

--- a/.vscode/index.html
+++ b/.vscode/index.html
@@ -33,7 +33,7 @@
             <a href="#">Inscrever-se no NLW</a>
           </li>
           <li>
-            <a href="https://github.com/DuduStocco/Rocketseat-Projeto-Discover" target="_blank">Veja Meu Portifólio</a>
+            <a href="https://github.com/DuduStocco" target="_blank">Veja Meu Portifólio</a>
           </li>
           <li>
             <a href="https://www.instagram.com/dudu_stocco" target="_blank">Meu Instagram</a>
