retirada da / do caminho das imagens

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <body>
     <div id="container">
       <div id="profile">
-        <img src="/DS_Perfil_Claro.png" alt="Imagem de perfil escura"/>
+        <img src="DS_Perfil_Claro.png" alt="Imagem de perfil escura"/>
         <p>@Dudu_Stocco</p>
 
         <div id="switch" onclick="toggleMode()">
